--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todo List</title>
-</head>
-<body>
-  <h1>dffff</h1>
-  <script src="index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Todo List</title>
+  </head>
+  <body>
+    <header>
+      <h1 class="logo">Todo List</h1>
+    </header>
+    <aside>
+      <div class="tasks">
+        <h2 class="inbox">Inbox</h2>
+        <h2 class="today">Today</h2>
+        <h2 class="week">This week</h2>
+      </div>
+      <div class="projects">
+        <h2 class="title_projects">Projects</h2>
+        <div class="addProject">+</div>
+      </div>
+    </aside>
+    <main></main>
+    <footer>
+      <p>Copyright © <a href="https://github.com/dg44k">dg44k</a></p>
+    </footer>
+    <script src="index.js"></script>
+  </body>
 </html>
