-add style for html

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <title>Todo List</title>
   </head>
   <body>
@@ -18,7 +19,8 @@
       </div>
       <div class="projects">
         <h2 class="title_projects">Projects</h2>
-        <div class="addProject">+</div>
+        <div class="card_projects"></div>
+        <div class="addProject">+ Add task</div>
       </div>
     </aside>
     <main></main>
